Corrected some layout bugs

--- a/themes/saudacor/sass/modules/about/_administration.scss
+++ b/themes/saudacor/sass/modules/about/_administration.scss
@@ -9,6 +9,7 @@
 
 	article{
 		text-align:center;
+		margin-bottom:30px;
 		p{
 			@include font-size(16px);
 			font-style:italic;
