--- a/themes/saudacor/sass/modules/home/_requisition.scss
+++ b/themes/saudacor/sass/modules/home/_requisition.scss
@@ -8,9 +8,10 @@
 		color:white;
 		padding-right:15px;
 
-		@include media-query(768px){
+		@include media-query(998px){
 			text-align:center;
 			margin-bottom:30px;
+			padding-right:0;
 		}
 	}
 
@@ -24,7 +25,7 @@
 			margin-left:30px;
 		}
 
-		@include media-query(768px){
+		@include media-query(998px){
 			margin-bottom:10px;
 			margin-left:0!important;
 		}
